--- a/force-app/main/default/layouts/Vyuha_Formation__mdt-Vyuha Formation Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Vyuha_Formation__mdt-Vyuha Formation Layout.layout-meta.xml
@@ -55,6 +55,10 @@
                 <behavior>Edit</behavior>
                 <field>Active__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Notification_Email__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
