--- a/force-app/main/default/layouts/Vyuha_Log__c-Vyuha Log Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Vyuha_Log__c-Vyuha Log Layout.layout-meta.xml
@@ -28,7 +28,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Required</behavior>
-                <field>Formation_ID__c</field>
+                <field>Vyuha_Formation__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
