another round of refactor fun

--- a/force-app/main/default/layouts/Vyuha_Formation__c-Vyuha Formation Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Vyuha_Formation__c-Vyuha Formation Layout.layout-meta.xml
@@ -19,10 +19,6 @@
                 <field>Batch_Size__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Required</behavior>
-                <field>Flow_API_Name__c</field>
-            </layoutItems>
-            <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Soql_Statement__c</field>
             </layoutItems>
@@ -33,6 +29,10 @@
             <layoutItems>
                 <behavior>Required</behavior>
                 <field>Flow_Interview_Name__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>Flow_Input_Variable_Name__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
