building out one-time scheduling

--- a/force-app/main/default/layouts/Vyuha_Schedule_Item__c-Vyuha Schedule Item Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Vyuha_Schedule_Item__c-Vyuha Schedule Item Layout.layout-meta.xml
@@ -20,11 +20,11 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Start_Date__c</field>
+                <field>Recurring_Start_Date__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>End_Date__c</field>
+                <field>Recurring_End_Date__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
@@ -57,6 +57,18 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Recurring_Day_Saturday__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>One_Time_Datetime__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Last_Successful_Run__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Last_Error_Encountered__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -95,6 +107,10 @@
         <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
+    <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>Vyuha_Log__c.Vyuha_Schedule_Item__c</relatedList>
+    </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
