adding Status fields and global picklist

--- a/force-app/main/default/layouts/Vyuha_Formation__c-Vyuha Formation Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Vyuha_Formation__c-Vyuha Formation Layout.layout-meta.xml
@@ -34,6 +34,10 @@
                 <behavior>Required</behavior>
                 <field>Flow_Input_Variable_Name__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>Status__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
