--- a/force-app/main/default/layouts/Vyuha_Schedule_Item__c-Vyuha Schedule Item Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Vyuha_Schedule_Item__c-Vyuha Schedule Item Layout.layout-meta.xml
@@ -74,6 +74,10 @@
                 <behavior>Readonly</behavior>
                 <field>Active__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Status__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
