working one-time scheduler

--- a/force-app/main/default/layouts/Vyuha_Schedule_Item__c-Vyuha Schedule Item Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Vyuha_Schedule_Item__c-Vyuha Schedule Item Layout.layout-meta.xml
@@ -75,8 +75,12 @@
                 <field>Active__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>Status__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Formation_Status__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
