--- a/force-app/main/default/layouts/Vyuha_Log__c-Vyuha Log Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Vyuha_Log__c-Vyuha Log Layout.layout-meta.xml
@@ -34,6 +34,10 @@
                 <behavior>Edit</behavior>
                 <field>Vyuha_Schedule_Item__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Message__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
