working on demand core and better error messaging/handling

--- a/force-app/main/default/layouts/Vyuha_Log__c-Vyuha Log Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Vyuha_Log__c-Vyuha Log Layout.layout-meta.xml
@@ -26,6 +26,14 @@
                 <behavior>Edit</behavior>
                 <field>Apex_Job_ID__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Message_Long__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Message__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
